public class Jail extends Fields{
    @Override
    public void doStuff(Player player) {
        System.out.println("Jail: " + getLabel());
    }
}
